<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_1"
        android:id="@+id/Item_1"
        android:textStyle="italic"
        android:titleCondensed="@string/appbar_scrolling_view_behavior"
        app:showAsAction="never"
        android:textColor="@color/black"/>

    <item android:title="@string/menu_2"
        android:id="@+id/Item_2"
        android:textStyle="bold"
        app:showAsAction="never"
        android:textColor="@color/black"/>

    <item android:title="@string/menu_3"
        android:id="@+id/item_3"
        app:showAsAction="ifRoom"
        android:textStyle="bold"
        android:icon="@drawable/notifications"
        android:textColor="@color/black"/>

    <item android:title="PIX"
        android:id="@+id/menu_4"
        android:textStyle="bold"
        app:showAsAction="never"
        android:textColor="@color/black"/>

    <item android:title="COMPROVANTES"
        android:id="@+id/menu_5"
        android:textStyle="bold"
        app:showAsAction="never"
        android:textColor="@color/black"/>




</menu>

