<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows = "true"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/redPrimary"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:textStyle="bold"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_santander_logo_1__1_"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ol_francisco"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>


    <TextView
        android:id="@+id/tv_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ag_4166"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_usuario"
        app:layout_constraintTop_toBottomOf="@+id/tv_usuario"/>

    <TextView
        android:id="@+id/tv_contacorrente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conta_001834_0"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/tv_agencia"
        app:layout_constraintTop_toTopOf="@id/tv_agencia"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_card_conta"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_agencia">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_saldo"
                android:layout_width="24dp"
                android:layout_height="30dp"
                android:layout_margin="16dp"
                android:src="@drawable/monetization_black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/todo" />
            <TextView
                android:id="@+id/tv_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saldo_disponivel"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="@+id/iv_saldo"
                app:layout_constraintLeft_toRightOf="@+id/iv_saldo"/>

            <ImageView
                android:id="@+id/iv_up"
                android:layout_width="78dp"
                android:layout_height="69dp"
                android:padding="16dp"
                android:src="@drawable/keyboard_arrow_up_black"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tv_saldo_atual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/iv_saldo"
                app:layout_constraintStart_toStartOf="@+id/iv_saldo"
                android:text="@string/r_1_599_00"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="26sp"
                android:layout_marginTop="19dp"/>

            <TextView
                android:id="@+id/tv_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saldo_limite"
                app:layout_constraintTop_toBottomOf="@+id/tv_saldo_atual"
                app:layout_constraintStart_toStartOf="@+id/tv_saldo_atual"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tv_saldo_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_2_324_64"
                app:layout_constraintTop_toTopOf="@+id/tv_saldo_limite"
                app:layout_constraintStart_toEndOf="@+id/tv_saldo_limite"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="8dp"/>
            <View
                android:id="@+id/v_linha"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@+id/tv_saldo_limite"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="16dp"/>
            <TextView
                android:id="@+id/tv_ver_extrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_extrato"
                android:textStyle="bold"
                android:textColor="@color/redSegundary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/v_linha"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_pagar"
        android:layout_width="114dp"
        android:layout_height="114dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mcv_card_conta">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:text="@string/pagamentos"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/iv_pagar"
                android:layout_width="73dp"
                android:layout_height="61dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_credit_card_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.263" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_transfer"
        android:layout_width="114dp"
        android:layout_height="114dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/mcv_card_conta"
        app:layout_constraintStart_toEndOf="@id/mcv_pagar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_transfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:text="Transferências"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/iv_transfer"
                android:layout_width="73dp"
                android:layout_height="61dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/transferencia"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.263" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_recargas"
        android:layout_width="114dp"
        android:layout_height="114dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/mcv_card_conta"
        app:layout_constraintStart_toEndOf="@id/mcv_transfer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_recargas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:text="Recargas"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/iv_recargas"
                android:layout_width="73dp"
                android:layout_height="61dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_phone_iphone_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.263" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/iv_cartao_final"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@color/redPrimary"
        app:layout_constraintTop_toBottomOf="@id/mcv_pagar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_cartao_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_o_final_033"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@+id/iv_cartao_final"
        app:layout_constraintLeft_toLeftOf="@+id/iv_cartao_final"
        app:layout_constraintBottom_toBottomOf="@+id/iv_cartao_final"/>
    <ImageView
        android:id="@+id/iv_seta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_expand_more_black_24dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartao_final"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final"
        app:layout_constraintEnd_toEndOf="@id/iv_cartao_final"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="125dp"
        android:background="@color/black"
        app:itemIconTint="@color/redPrimary"
        app:itemRippleColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/iv_cartao_final"
        app:menu="@menu/bottom_mavigation_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>





</androidx.constraintlayout.widget.ConstraintLayout>